    * 0330 FIX: Improved performance of WATO slave push with a large user base...
    * 0331 FIX: LDAP diagnostic LOG can now have the $OMD_SITE$ macro configured via WATO...
    * 0332 FIX: Own host tag groups without topics resulted in two groups "Host tags" in the rule editor
    * 0361 FIX: The page linked by "new rule" can now be bookmarked again

    Notifications:
    * 0362 sms: now searching PATH for sendsms and smssend commands...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0338 FIX: Introduce time limit on availability queries...

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
    * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...
    * 0292 FIX: Inline SNMP: Check_MK check helpers are closing UDP sockets now...

    Checks & Agents:
    * 0060 cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches